@@ -17,6 +17,7 @@ REG_KEY(0, KC_OK, 13)
 REG_KEY(0, KC_ESC, 27)
 REG_KEY(0, KC_P, 112)
 
+SET_MUTE(FALSE)
 AHAT_LOGO = 0
 AHAT_TICK = 1
 AHAT_COLLIDE = 2
